arpspoof/server.yml
apiVersion: v1
kind: Pod
metadata:
  name: server
  labels:
    group: arpspoof
spec:
  containers:
  - name: server
    image: timwang/ieeetrycybserverapacheflaskappsslhstsrewrite:4.0
