arpspoof/victim.yml
apiVersion: v1
kind: Pod
metadata:
  name: victim
  labels:
    group: arpspoof
spec:
  containers:
  - name: victim
    image: timwang/ieeetrycybsecurityvncdesktop:9.0
